--- a/index/assets/CSS/style.css
+++ b/index/assets/CSS/style.css
@@ -1,5 +1,6 @@
 body{
-	background-image: url("../images/background.png")
+	background-color: pink;
+	
 }
 div{
 	background-color: white;
@@ -13,27 +14,38 @@ div{
 h1, h3, span{
 	font-weight: bold;
 	text-align: center;
+	font-family: 'Lora', serif;
 }
 h1{
 	font-size: 30pt;
+	font-family: 'Fascinate Inline', cursive;
 }
 ol{
 	list-style: decimal inside; 
+	font-family: 'Lora', serif;
+	
 }
 ul {
 	list-style: disc inside;
 	text-indent: 20px;
+	font-family: 'Lora', serif;
+	
 }
 /* Specfic Elements*/
+div#container {
+	margin: auto;
+	width: 60%;
+	/*text-align: center;*/
+}
+
 div.header, div.gems{
 	background-color: #e0e0eb;
 }
 div.header, div.instructions{
-	width: 50%;
+	width: 70%;
 }
 /* Classes */
 .numberToMatch, .winsAndLosses{
-	float: left;
 	width: 15%;
 	height: 60px;
 }
@@ -43,6 +55,11 @@ div.header, div.instructions{
 }
 .gems{
 	clear: both;
+	width: 40%;
+}
+.center {
+	margin:auto;
+
 }
 .gemImage{
 	height: 60px;
